# CLI-DeepresearchAgent

./: .env.example  README.md  main.py  pyproject.toml
deepresearch/: __init__.py  __version__.py
deepresearch/agents/: __init__.py  base.py
deepresearch/cli/: main.py
