[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cli-deepresearch"
dynamic = ["version"]
description = "A multi-agent deep research system powered by LangGraph"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["llm", "research", "langgraph", "multi-agent", "cli", "deepseek", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "openai>=1.50.0",
    "anthropic>=0.39.0",
    "google-generativeai>=0.8.0",
    "tavily-python>=0.5.0",
    "arxiv>=2.1.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "typing-extensions>=4.12.0",
]

[project.scripts]
deepresearch = "deepresearch.cli.main:main"

[tool.setuptools.dynamic]
version = { attr = "deepresearch.__version__.__version__" }

[tool.setuptools.packages.find]
include = ["deepresearch*"]

[tool.setuptools.package-data]
deepresearch = ["prompts/templates/*.j2", "prompts/templates/*.txt"]
